...
              'both',
              searchState.selectedFilter,
              Icons.search,
            ),
            const SizedBox(width: 8),
            _buildFilterChip(
              'Арабӣ',
              'arabic',
              searchState.selectedFilter,
              Icons.language,
            ),
            const SizedBox(width: 8),
            _buildFilterChip(
...
