...
      4: 'Ан-Нисо',
      5: 'Ал-Маида',
      6: 'Ал-Анъом',
      7: 'Ал-Аъроф',
      8: 'Ал-Анфол',
      9: 'Ат-Тавба',
      10: 'Юнус',
      11: 'Ҳуд',
      12: 'Юсуф',
      13: 'Ар-Раъд',
      14: 'Иброҳим',
      15: 'Ал-Ҳиҷр',
      16: 'Ан-Наҳл',
...
